--- a/k8s/federation/prometheus.yml
+++ b/k8s/federation/prometheus.yml
@@ -109,16 +109,15 @@ spec:
             configMapKeyRef:
               name: prometheus-federation-config
               key: gcloud-project
-        args: [ "-aef-target=/targets/aeflex-targets/aeflex.json",
-                "-gke-target=/targets/federation-targets/prometheus-clusters.json",
-                "-http-target=/targets/legacy-targets/sidestream.json",
-                "-http-target=/targets/blackbox-targets/ssh806.json",
-                "-http-target=/targets/blackbox-targets/rsyncd.json",
-                "-http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/legacy-targets/sidestream.json",
-                "-http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/ssh806.json",
-                "-http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/rsyncd.json",
-                "-project=$(GCLOUD_PROJECT)" ]
-        - mountPath: /federation-targets
+        args: [ "--aef-target=/targets/aeflex-targets/aeflex.json",
+                "--gke-target=/targets/federation-targets/prometheus-clusters.json",
+                "--http-target=/targets/legacy-targets/sidestream.json",
+                "--http-target=/targets/blackbox-targets/ssh806.json",
+                "--http-target=/targets/blackbox-targets/rsyncd.json",
+                "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/legacy-targets/sidestream.json",
+                "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/ssh806.json",
+                "--http-source=https://storage.googleapis.com/operator-$(GCLOUD_PROJECT)/prometheus/blackbox-targets/rsyncd.json",
+                "--project=$(GCLOUD_PROJECT)"]
         resources:
           requests:
             memory: "10Mi"
