--- a/k8s/cluster/prometheus.yml
+++ b/k8s/cluster/prometheus.yml
@@ -44,7 +44,6 @@ spec:
         # Tell prometheus service discovery to scrape the node-exporter running
         # within the prometheus-server pod.
         prometheus.io/scrape: 'true'
-        # prometheus.io/port: '9100'
     spec:
       # Clusters running a prometheus instance must label nodes exclusively for
       # use by prometheus. See README for steps to create a GKE cluster for
@@ -63,7 +62,7 @@ spec:
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
-        name: prometheus-server
+        name: prometheus
         # Note: Set retention time to 120 days. (default retention is 30d).
         args: ["-config.file=/etc/prometheus/prometheus.yml",
                "-storage.local.path=/prometheus",
@@ -108,7 +107,7 @@ spec:
       # access to the same namespace and volumes as the prometheus-server. This
       # allows simple disk usage monitoring of the "/prometheus" mount point.
       - image: prom/node-exporter:v0.13.0
-        name: fs-exporter
+        name: node-exporter
         # Note: only enable the filesystem collector, and ignore system paths.
         args: [ "--collectors.enabled=filesystem",
                 "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)"]
@@ -126,7 +125,7 @@ spec:
           name: prometheus-storage
 
       - image: measurementlab/gcp-service-discovery
-        name: service-discovery
+        name: gcp-service-discovery
         env:
         - name: GCLOUD_PROJECT
           value: mlab-sandbox
