Add storage class and volume claim for an SSD.

--- a/k8s/persistent-volumes.yml
+++ b/k8s/persistent-volumes.yml
@@ -36,3 +36,16 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: auto-prometheus-ssd0
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "fast"
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 200Gi
