--- a/k8s/cluster/prometheus.yml
+++ b/k8s/cluster/prometheus.yml
@@ -56,26 +56,35 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v1.5.2
+      - image: prom/prometheus:v1.6.3
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
         name: prometheus
         # Note: Set retention time to 120 days. (default retention is 30d).
+        #
+        # See https://www.youtube.com/watch?v=hPC60ldCGm8 for ~recent
+        # configuration best practices.
+        #
+        # TODO(soltesz): we're setting -storage.local.target-heap-size to ~75%
+        # of available RAM. They recommend preserving a 50% headroom, but I'm
+        # setting it higher right now to over-provision and leave fine-tuning
+        # to a later step.
         args: ["-config.file=/etc/prometheus/prometheus.yml",
                "-storage.local.path=/prometheus",
                "-storage.local.retention=2880h",
+               "-storage.local.target-heap-size=75161927680",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles"]
         ports:
           - containerPort: 9090
         resources:
           requests:
-            memory: "8Gi"
-            cpu: "3000m"
+            memory: "96Gi"
+            cpu: "8000m"
           limits:
-            memory: "8Gi"
-            cpu: "3000m"
+            memory: "96Gi"
+            cpu: "8000m"
         volumeMounts:
         # /prometheus stores all metric data. Declared as VOLUME in base image.
         - mountPath: /prometheus
@@ -115,7 +124,7 @@ spec:
       volumes:
       - name: prometheus-storage
         persistentVolumeClaim:
-          claimName: auto-prometheus-disk0
+          claimName: auto-prometheus-ssd0
       - name: prometheus-config
         configMap:
           name: prometheus-cluster-config
