--- a/k8s/federation/prometheus.yml
+++ b/k8s/federation/prometheus.yml
@@ -33,6 +33,10 @@ spec:
       nodeSelector:
         prometheus-node: 'true'
 
+      # When prometheus receives SIGTERM, it begins a new checkpoint. This can
+      # take longer than the default grace period of 30s.
+      terminationGracePeriodSeconds: 240
+
       # Place the pod into the Guaranteed QoS by setting equal resource
       # requests and limits for *all* containers in the pod.
       # For more background, see:
